Criado Endpoint relatorio-processos-pdf 6